<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_main_background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_main_background"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layout_user" />

        <LinearLayout
            android:id="@+id/layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/layout_password">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:cardCornerRadius="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:padding="12dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_user" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:maxLength="25"
                        android:lines="1"
                        android:background="@color/white"
                        android:inputType="textWebEmailAddress"
                        android:text="@string/duykhanh_gmail_com" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:padding="12dp"
                        android:src="@drawable/ic_check" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/floating_bottom_login">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:cardCornerRadius="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:padding="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_password" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8.5"
                        android:background="@color/white"
                        android:maxLength="20"
                        android:lines="1"
                        android:inputType="textPassword"
                        android:text="@string/duykhanh_gmail_com" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floating_bottom_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/login"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_forgot_your_password" />

        <TextView
            android:id="@+id/tv_forgot_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_your_password">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/or_connect_with"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/linear_layout_bottom" />

            <LinearLayout
                android:id="@+id/linear_layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@+id/linear_layout_sing_up">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/facebook"
                    android:drawableLeft="@drawable/ic_logo_face"
                    android:text="@string/facebook"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_forgot_your_password"
                    tools:ignore="RtlHardcoded" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/twitter"
                    android:drawableLeft="@drawable/ic_twitter"
                    android:text="@string/twitter"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_forgot_your_password"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up"
                    android:textColor="@color/twitter"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>